--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,13 +11,11 @@
     <div class="ui fixed inverted menu">
         <div class="ui container">
             <div class="header item">
-                <i class="code icon"></i>
-                Blog Site
+                <i class="paperclip icon"></i><a href="/">&nbsp; Blog Site</a>
             </div>
             <a href="/" class="item">Home</a>
             <a href="/blogs/new" class="item">New Post</a>
         </div>
-
     </div>
 
     
